addons/kyverno/policies/edtech-ppra_parental_consent_sensitive_surveys-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: edtech-ppra_parental_consent_sensitive_surveys
  annotations:
    rulehub.id: edtech.ppra_parental_consent_sensitive_surveys
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: "edtech.ppra_parental_consent_sensitive_surveys: example validation"
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
